k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tastecam-frontend
spec:
  selector:
    app: tastecam-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: NodePort
